# pegasus

./: .gitignore  README.md  chunk_cos.py  chunk_courses.py  courses_rag.ipynb  extract_shit.py  flake.nix  pyproject.toml  rag.ipynb  slot_courses.py
app/: app.py
colab/: pegasus.ipynb
scripts/: add_slots_to_courses.py  extract_course_links_bsw.py  scrape_cos_apj.py  scrape_cos_sps.py  scrape_inception.py  vectorize_inception_and_united.py
scripts/add_study_materials/: add_study_materials.py  app.py
