[project]
name = "pegasus"
version = "0.1.0"
description = ""
authors = [
    {name = "0oAstro",email = "79555780+0oAstro@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pypdf2 (>=3.0.1,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "numpy (>=2.2.1,<3.0.0)",
    "fitz (>=0.0.1.dev2,<0.0.2)",
    "frontend (>=0.0.3,<0.0.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
